# backend_vpn

./: .dockerignore  .env.example  .gitignore  Dockerfile  PROJECT_OVERVIEW.md  QUICKSTART.md  README.md  check_project.py  docker-compose.yml  main.py  pyproject.toml  test_xui_login.py
.qwen/: settings.json
app/: config.py  database.py  dependencies.py  main.py  redis_client.py  xui_client.py
app/crud/: __init__.py  spa.py  telegram_link.py  user.py  vpn_key.py
app/models/: __init__.py  device.py  email_verification_code.py  link_token.py  telegram_auth_code.py  transaction.py  user.py  vpn_key.py
app/routers/: auth.py  spa.py  vpn.py  web.py
app/schemas/: __init__.py  spa.py  user.py  vpn_key.py
app/services/: mail.py  telegram_bot.py
app/templates/: base.html  login.html  profile.html  register.html  vpn_new.html  vpn_panel.html
tests/: test_auth.py
